// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for OptimizelyDataPlatform's emailEvent destination action: all fields 1`] = `
Object {
  "action": "4v7TZkJBZ*J1n#7wW@T%",
  "campaign": "4v7TZkJBZ*J1n#7wW@T%",
  "campaign_event_value": "4v7TZkJBZ*J1n#7wW@T%",
  "timestamp": "4v7TZkJBZ*J1n#7wW@T%",
  "type": "email",
  "user_identifiers": Object {
    "anonymousId": "4v7TZkJBZ*J1n#7wW@T%",
    "email": "wi@ilcichu.sd",
    "optimizely_vuid": "4v7TZkJBZ*J1n#7wW@T%",
    "userId": "4v7TZkJBZ*J1n#7wW@T%",
  },
}
`;

exports[`Testing snapshot for OptimizelyDataPlatform's emailEvent destination action: required fields 1`] = `
Object {
  "campaign": "4v7TZkJBZ*J1n#7wW@T%",
  "campaign_event_value": null,
  "type": "email",
  "user_identifiers": Object {
    "email": "wi@ilcichu.sd",
  },
}
`;
